Commit #2: código JS inicializado
* README atualizado
* HTML: - Id adicionado nos botões 'C' e '=' (botões que não aparecem na tela input ao serem clicados, apenas desempenham uma função)
	- Classe e 'data-value' adicionados a todos os botões que aparecem na tela input ao serem clicados (ex: números e operadores)
	- Todos os botões agora especificados com 'type' do tipo 'button'(menos o botão de copiar, ainda não sei como o utilizarei)
* CSS:  - Borda feia de foco removida do input de tela da calculadora (#calculator-screen-input)
* JS:   - Botões capturados. Apenas botões disponíveis no teclado da calculadora podem ser utilizados pelo teclado real.
	- Todos os botões da calculadora clicáveis com eventos funcionando. Ainda faltam a lógica das operações e a funcionalidade do botão 'equals'
	- Botões de trocar tema e copiar resultado ainda não foram desenvolvidos

--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,11 @@ section {
     grid-area: calculator-screen-input;
 }
 
+#calculator-screen-input:focus {
+    outline: none;
+    box-shadow: none;
+}
+
 h1 {
     font-weight: 700;
 }
