--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
     --lemonYellow: rgb(250, 250, 51);
     --babyBlue: rgb(137, 207, 240);
     --gunMetalGray: rgb(129, 133, 137);
+    --brightRed: rgb(238, 75, 43);
 
     /* font */
     --mainFont: 'Chakra Petch', sans-serif;
@@ -52,15 +53,15 @@ section {
 
 .input-container {
     display: grid;
-    grid-template-areas: 
-    "title-container title-container title-container switch-theme-button"
-    "calculator-screen-input calculator-screen-input calculator-screen-input calculator-screen-input";
+    grid-template-areas:
+        "title-container title-container title-container switch-theme-button"
+        "calculator-screen-input calculator-screen-input calculator-screen-input calculator-screen-input";
     gap: 1rem;
 }
 
 .title-container {
     grid-area: title-container;
-};
+}
 
 #switch-theme-button {
     grid-area: switch-theme-button;
@@ -201,10 +202,43 @@ input {
     display: flex;
 }
 
-#copyToClipboardButton {
+#copy-to-clipboard-button {
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
     flex-grow: 1;
+    position: relative;
+}
+
+.copied-message-dark-theme::before,
+.copied-message-light-theme::before {
+    background-color: var(--lemonYellow);
+    color: var(--matteBlack);
+    padding: .5rem;
+    content: "Copied!";
+    position: absolute;
+    bottom: -3.2rem;
+    left: .5rem;
+    border-radius: .3rem;
+}
+
+.copied-message-light-theme::before {
+    background-color: var(--gunMetalGray);
+}
+
+.copied-message-dark-theme::after,
+.copied-message-light-theme::after {
+    content: "";
+    background-color: var(--lemonYellow);
+    position: absolute;
+    top: 4rem;
+    left: 2.4rem;
+    width: .8rem;
+    height: .8rem;
+    transform: rotate(45deg);
+}
+
+.copied-message-light-theme::after {
+    background-color: var(--gunMetalGray);
 }
 
 #results-input {
@@ -215,17 +249,21 @@ input {
     font-weight: 700;
 }
 
+.error-message {
+    color: var(--brightRed);
+}
+
 @media (width < 540px) {
     section {
         min-width: 350px;
     }
 
     .input-container {
-        grid-template-areas: 
-        "title-container switch-theme-button"
-        "calculator-screen-input calculator-screen-input";
+        grid-template-areas:
+            "title-container switch-theme-button"
+            "calculator-screen-input calculator-screen-input";
     }
-    
+
     h1 {
         font-size: 1.3rem;
     }
@@ -245,7 +283,7 @@ input {
         padding: 0rem;
     }
 
-    .buttons-container, 
+    .buttons-container,
     .input-container {
         gap: .7rem;
         justify-content: space-between;
@@ -254,5 +292,10 @@ input {
     .calculator-buttons {
         padding: .7rem;
         font-size: 1rem;
+    }
+
+    .copied-message-dark-theme::after,
+    .copied-message-light-theme::after {
+        top: 3.2rem;
     }
 }
